fix RTL alignment for some objects

--- a/web_lang/static/src/css/ar_EG.css
+++ b/web_lang/static/src/css/ar_EG.css
@@ -530,3 +530,4 @@ th,.openerp td{text-align:right}
 .openerp .oe_bank_statement_reconciliation .oe_bank_statement_reconciliation_line .accounting_view caption .tip_reconciliation_not_balanced { float: left;}
 .oe_form td.oe_form_group_cell_label label {text-align:left;padding-left:10px;}
 .openerp .oe_application .oe_breadcrumb_title>* {padding-right: 10px !important;}
+.openerp .oe-treeview-table .treeview-tr.oe-treeview-first,.openerp .oe-treeview-table .treeview-td.oe-treeview-first span, .openerp .oe-treeview-table .treeview-tr.oe-treeview-first span { text-align: right; direction: rtl; float: right;}
